force-app/main/default/objects/Testing__c/Testing__c.object-meta.xml
<CustomObject>
    <label>Testing</label>
    <nameField>
        <label>Testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>