force-app/main/default/objects/Testing__c/fields/birth_date__c.field-meta.xml
<CustomField>
    <fullName>birth_date__c</fullName>
    <label>birth date</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>