force-app/main/default/objects/Testing__c/fields/final_date__c.field-meta.xml
<CustomField>
    <fullName>final_date__c</fullName>
    <formula>processdate__c  - DATE( 
VALUE(year__c), 
VALUE(TEXT(Month__c)), 
VALUE(TEXT(date__c)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>final date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>