force-app/main/default/objects/Testing__c/fields/Formulae_date_cal__c.field-meta.xml
<CustomField>
    <fullName>Formulae_date_cal__c</fullName>
    <formula>DATE(
 VALUE(year__c),
 VALUE(TEXT(Month__c)),
 VALUE(TEXT(date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulae date cal</label>
    <type>Date</type>
</CustomField>