force-app/main/default/objects/Testing__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>