force-app/main/default/objects/Testing__c/fields/OS_Type__c.field-meta.xml
<CustomField>
    <fullName>OS_Type__c</fullName>
    <label>computer parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>LINUX</fullName>
            </value>
            <value>
                <fullName>apple mouse</fullName>
            </value>
            <value>
                <fullName>windows harddisk</fullName>
            </value>
            <value>
                <fullName>apple mointors</fullName>
            </value>
            <value>
                <fullName>apple headset</fullName>
            </value>
            <value>
                <fullName>windows keyboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>