force-app/main/default/objects/Testing__c/fields/processdate__c.field-meta.xml
<CustomField>
    <fullName>processdate__c</fullName>
    <label>processdate</label>
    <type>Date</type>
</CustomField>