force-app/main/default/objects/Testing__c/recordTypes/IOS.recordType-meta.xml
<RecordType>
    <fullName>IOS</fullName>
    <active>true</active>
    <label>IOS</label>
</RecordType>